change config to use rds

--- a/docker/0.6/config_docker.json
+++ b/docker/0.6/config_docker.json
@@ -36,8 +36,8 @@
     },
     "SqlSettings": {
         "DriverName": "mysql",
-        "DataSource": "mmuser:mostest@tcp(localhost:3306)/mattermost_test?charset=utf8mb4,utf8",
-        "DataSourceReplicas": ["mmuser:mostest@tcp(localhost:3306)/mattermost_test?charset=utf8mb4,utf8"],
+        "DataSource": "${RDS_USERNAME}:${RDS_PASSWORD}@tcp(${RDS_HOSTNAME}:3306)/${RDS_DATABASE}?charset=utf8mb4,utf8",
+        "DataSourceReplicas": ["${RDS_USERNAME}:${RDS_PASSWORD}@tcp(${RDS_HOSTNAME}:3306)/${RDS_DATABASE}?charset=utf8mb4,utf8"],
         "MaxIdleConns": 10,
         "MaxOpenConns": 10,
         "Trace": false,
@@ -60,11 +60,11 @@
     },
     "EmailSettings": {
         "ByPassEmail" : true,
-        "SMTPUsername": "",
-        "SMTPPassword": "",
-        "SMTPServer": "",
-		"UseTLS": false,
-		"UseStartTLS": false,
+        "SMTPUsername": "${SMTP_USERNAME}",
+        "SMTPPassword": "${SMTP_PASSWORD}",
+        "SMTPServer": "${SMTP_SERVER}",
+        "UseTLS": false,
+        "UseStartTLS": false,
         "FeedbackEmail": "",
         "FeedbackName": "",
         "ApplePushServer": "",
