--- a/docker/0.6/Dockerfile
+++ b/docker/0.6/Dockerfile
@@ -7,21 +7,16 @@ FROM ubuntu:14.04
 #
 
 RUN groupadd -r mysql && useradd -r -g mysql mysql
-
 RUN apt-get update && apt-get install -y perl --no-install-recommends && rm -rf /var/lib/apt/lists/*
-
 RUN apt-key adv --keyserver pool.sks-keyservers.net --recv-keys A4A9406876FCBD3C456770C88C718D3B5072E1F5
-
 ENV MYSQL_MAJOR 5.6
 ENV MYSQL_VERSION 5.6.25
-
 RUN echo "deb http://repo.mysql.com/apt/debian/ wheezy mysql-${MYSQL_MAJOR}" > /etc/apt/sources.list.d/mysql.list
-
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && apt-get -y install mysql-client
 
-# ---------------------------------------------------------------------------------------------------------------------
-
 WORKDIR /mattermost
+
+VOLUME /etc/ssl/certs/ /etc/ssl/certs/
 
 # Copy over files
 ADD https://github.com/mattermost/platform/releases/download/v0.6.0/mattermost.tar.gz /
