set ByPassEmail to true

--- a/docker/0.6/config_docker.json
+++ b/docker/0.6/config_docker.json
@@ -59,7 +59,7 @@
         "InitialFont": "luximbi.ttf"
     },
     "EmailSettings": {
-        "ByPassEmail" : false,
+        "ByPassEmail" : true,
         "SMTPUsername": "${SMTP_USERNAME}",
         "SMTPPassword": "${SMTP_PASSWORD}",
         "SMTPServer": "${SMTP_SERVER}",
