--- a/docker/0.6/config_docker.json
+++ b/docker/0.6/config_docker.json
@@ -63,7 +63,7 @@
         "SMTPUsername": "${SMTP_USERNAME}",
         "SMTPPassword": "${SMTP_PASSWORD}",
         "SMTPServer": "${SMTP_SERVER}",
-        "UseTLS": false,
+        "UseTLS": true,
         "UseStartTLS": false,
         "FeedbackEmail": "ops@grandrounds.com",
         "FeedbackName": "Site Operations",
