--- a/docker/0.6/config_docker.json
+++ b/docker/0.6/config_docker.json
@@ -9,7 +9,7 @@
     },
     "ServiceSettings": {
         "SiteName": "Mattermost",
-        "Mode" : "dev",
+        "Mode" : "prod",
 		"AllowTesting" : false,
         "UseSSL": false,
         "Port": "80",
@@ -59,12 +59,12 @@
         "InitialFont": "luximbi.ttf"
     },
     "EmailSettings": {
-        "ByPassEmail" : true,
+        "ByPassEmail" : false,
         "SMTPUsername": "${SMTP_USERNAME}",
         "SMTPPassword": "${SMTP_PASSWORD}",
         "SMTPServer": "${SMTP_SERVER}",
-        "UseTLS": true,
-        "UseStartTLS": false,
+        "UseTLS": false,
+        "UseStartTLS": true,
         "FeedbackEmail": "ops@grandrounds.com",
         "FeedbackName": "Site Operations",
         "ApplePushServer": "",
