--- a/docker/0.6/config_docker.json
+++ b/docker/0.6/config_docker.json
@@ -63,8 +63,8 @@
         "SMTPUsername": "${SMTP_USERNAME}",
         "SMTPPassword": "${SMTP_PASSWORD}",
         "SMTPServer": "${SMTP_SERVER}",
-        "UseTLS": false,
-        "UseStartTLS": true,
+        "UseTLS": true,
+        "UseStartTLS": false,
         "FeedbackEmail": "ops@grandrounds.com",
         "FeedbackName": "Site Operations",
         "ApplePushServer": "",
