--- a/docker/0.6/config_docker.json
+++ b/docker/0.6/config_docker.json
@@ -11,7 +11,7 @@
         "SiteName": "Mattermost",
         "Mode" : "prod",
 		"AllowTesting" : false,
-        "UseSSL": false,
+        "UseSSL": true,
         "Port": "80",
         "Version": "developer",
         "Shards": {
