--- a/docker/0.6/Dockerfile
+++ b/docker/0.6/Dockerfile
@@ -18,7 +18,7 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && apt-get -y instal
 WORKDIR /mattermost
 
 # Copy over files
-ADD ../../dist/mattermost.tar.gz /
+COPY mattermost.tar.gz /
 RUN tar -zxvf /mattermost.tar.gz --strip-components=1
 ADD config_docker.json /
 ADD docker-entry.sh /
